# full-stack-rust-workshop

./: Cargo.toml  README.md  Shuttle.toml  api.http  commands.md
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs  routines.rs
api/lib/src/film_repository/: mod.rs
api/lib/src/routines_repository/: mod.rs  postgres_routines_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
api/shuttle/static/: index.html
shared/: Cargo.toml
shared/src/: models.rs
