[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shared = { path = "../../shared", features = ["backend"] }

# db
sqlx = { workspace = true }
# actix
actix-web = { workspace = true }
# serde
serde = { workspace = true }
serde_json = "1.0"
# utils
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1.68"
tracing = { workspace = true }
log = "0.4"
env_logger = "0.11.3"



[dev-dependencies]
actix-rt = "2"
mockall = "0.12.1"
